# scaling-forecasting-training

./: .gitignore  LICENSE  README.md  SETUP.md  env.txt  minir1_env.yml  minir1_reqs.txt  pyproject.toml  requirements-forecast.txt  requirements.txt  requirements_uv.txt  requirements_verl.txt  setup.sh  setup_gptoss_env.sh  uv_packages.txt
custom_eval_scripts/: README.MD  README.md  batch_freeform_evals.py  batch_freeform_evals.sh  custom_eval.py  data_utils.py  eval_binary.py  eval_binary_retrieval.py  eval_folktexts.py  eval_forecasting_mcq.py  eval_forecasting_vllm.py  eval_freeform.py  eval_freeform_retrieval.py  eval_futurebench.py  eval_futurex.py  eval_gptoss.py  eval_math.py  eval_mmlu_pro.py  eval_openforesight.py  eval_paleka.py  eval_retrieval.py  eval_retrievalbinary.py  eval_simpleqa.py  gpqa_mcq.py  jobs_eval.py  launch_custom_eval_job.sh  launch_eval_job.sh  mmlu_pro_mcq.py  retrieval_evals.sh  run_paleka_example.sh  utils.py
data/: README.md  filter_metaculus_nulls.py  futureX.py  futurex_predictions.jsonl  manifold_new.py  process_relevant_docs.py
data/foresight/: push_model.py  push_to_hf.py  push_to_hf.sh  standardize_data.py
data/hf_futurebench/: check.py
data/infinitegames/: analysis.ipynb  analyze_binary.py
data/kalshi/: fetcher.py
data/metaculus/: analyze_metaculus_raw.py  convert_to_standardized_format.py  decide_dates_real_fq.py  fetch_questions.py  filter_all.py  filter_final_clean.py  get_metaculus.py  mcq_prepare.py  metaculus.py  metaculus_mcq.py  metaculus_new.py  prepare_imp_questions.py  prepare_metaculus_test.py  (+1 more)
embeddding_retrieval/: README.md  __init__.py  data_loader.py  embed.py  embedding_manager.py  example.py  keep_unique.py  main_new.py  parse.py  pipeline.py
embedding_retrieval/: README.md  __init__.py  config.py  main.py  retrieval.py
libraries/: README.MD
local_judge/: README.md  download_qwen3.py  jobs_eval.py  launch_custom_eval_job.sh  llm_judge.py  models_utils.py
misc/: analyze_failures.py  colab_notebook.ipynb  convert_to_jsonl.py  data_curation_section.tex  failure_analysis.tex  get_gptoss_model.py  gpt120b.py  manual_analyze_failures.py  num_gpus.py  recreate_plot.py  test_gemma_load.py
news/: README.md  domains.txt  jobs_news.py  launch_news_crawl_job.sh  relevant_domains.txt  to_jsonl.py
openrouter_evals/: batched_aysnc_evals.py  binary_evals.py  check_openrouter.py  check_outputs.py  data_utils.py  distill_retrieval.py  freeform_evals.py  futurebench_evals.py  futurex_past_evals.py  futurex_retrieval_evals.py  paleka_evals.py  paleka_evals_backup.py  paleka_evals_fixed.py  retrieval_evals.py  run_evals.py  save_futurex.py  test_openrouter.py
output/: telegraph20_generated.jsonl  telegraph20_generated_converted.jsonl  telegraph20_generated_converted_date_extracted.jsonl
qgen/: FILTER_README.md  README.md  analyze_answer_types.py  article_processor.py  classifier.py  combine_questions.py  extract_date.py  filter_articles.py  filter_exact_leakage.py  from_article.py  jobs_qgen.py  launch_qgen_job.sh  parse_for_classifier.py  question_generator.py  remove_exact_leakage.py  remove_fields.py  remove_leakage.py  remove_start_date.py  run_pipeline.py  select_articles.py  update_resolution_date.py  update_start_date.py
trainingTRL/: README.MD  README_multigpu.md  analyze_reward_fn.py  data_utils.py  gptoss_grpo.py  jobs_train.py  launch_gptoss_multigpu.sh  launch_multigpu_training.sh  launch_train_job.sh  launch_train_job_log_odds.sh  lora_without_regret.py  loss_fn.py  multigpu_gptoss.py  sft_gptoss.py  train_config.yaml  train_config_log_odds.yaml  train_grpo.py  train_grpo_log_odds.py  unsloth_kernel.py
(+329 files in other folders)
